Bug 139700 - UI: no hover over effect page size picker in tabbed mode
Summary: UI: no hover over effect page size picker in tabbed mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Notebookbar-Tabbed
  Show dependency treegraph
 
Reported: 2021-01-17 10:43 UTC by Telesto
Modified: 2024-12-03 13:52 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-01-17 10:43:56 UTC
Description:
UI: no hoover over effect page size picker in tabbed mode

Steps to Reproduce:
1. open Writer in tabbed mode
2. Layout -> Page size
3. Hoover over the options

Actual Results:
No hoover over effect

Expected Results:
Ideally yes


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: f2171af6ce3516598d9f8bac8294025a21a5b1a2
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 psidiumcode 2021-06-09 19:42:10 UTC
I could reproduce it in MacOS. 

Version: 7.0.6.2
Build ID: 144abb84a525d8e30c9dbbefa69cbbf2d8d4ae3b
CPU threads: 12; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 31ed81ea71a20ec119805f66a42f99b3f80d2dc5
CPU threads: 12; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 2 QA Administrators 2023-06-10 03:14:22 UTC Comment hidden (obsolete)
Comment 3 Alec K 2023-06-26 14:25:17 UTC
This bug is still present in:

Version: 7.5.4.2 (AARCH64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 10; OS: Mac OS X 13.4; UI render: default; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

After clicking 'Page Size' from the Layout tab, the drop-down menu does not highlight options as the mouse moves over them.

This mouse-over hover effect is present in the nearby "Page Margins", "Orientation", and "Page Columns" interfaces within the Layout tab.
Comment 4 Kira Tubo 2023-09-23 21:48:56 UTC
I don't think Tabbed toolbar was available in 3.3, so most likely a regression. 

Reproduced in daily master build. 

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 486ae5db6987411d5e394de94b2b077099d03856
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 5 Kira Tubo 2023-09-23 22:02:28 UTC
Reproduced in:

Version: 7.0.3.1 (x64)
Build ID: d7547858d014d4cf69878db179d326fc3483e082
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 6 Justin L 2023-10-15 01:37:22 UTC
The Page Size option is not a GTK widget, but a home-grown thing. So it acts differently to pretty much everything else. (A few other things like paragraph styles, fonts are also home-grown.)
Comment 7 Aryeh 2024-11-26 22:08:17 UTC Comment hidden (obsolete)
Comment 8 BogdanB 2024-11-27 05:03:53 UTC Comment hidden (obsolete)
Comment 9 Buovjaga 2024-12-03 06:45:16 UTC
Bibisected with linux-64-7.0 to 53d2a0390473319555f244f0ac3cf9a44b5ac7a0
weld PageSizePopup
Comment 10 Caolán McNamara 2024-12-03 10:51:25 UTC
lets try https://gerrit.libreoffice.org/c/core/+/177728 for that problem
Comment 11 Commit Notification 2024-12-03 12:50:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/db40f96f617f579486328ce4ed11f4c0a9540789

Resolves: tdf#139700 use WB_FLATVALUESET to get tracking highlights

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Buovjaga 2024-12-03 13:52:31 UTC
Verified, thanks

Arch Linux 64-bit
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: db40f96f617f579486328ce4ed11f4c0a9540789
CPU threads: 8; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 3 December 2024