Resolves: tdf#139700 use WB_FLATVALUESET to get tracking highlights

a problem since:

commit 53d2a0390473319555f244f0ac3cf9a44b5ac7a0
CommitDate: Tue Jan 14 13:45:44 2020 +0100

    weld PageSizePopup

Change-Id: I5e55d1972a205b7bf1ec6f6bdfd2d8cd22e13eca
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177728
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>